--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 supervised_learning/neural_style_transfer/__pycache__/0-neural_style.cpython-39.pyc
+supervised_learning/time_series/bitstampUSD_1-min_data_2012-01-01_to_2020-04-22.csv
+supervised_learning/time_series/coinbaseUSD_1-min_data_2014-12-01_to_2019-01-09.csv
