--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.pyc
 supervised_learning/time_series/coin_csv.JPG
 supervised_learning/transfer_learning/coin_csv.JPG
+supervised_learning/transformer_apps/test-1.ipynb
