--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 supervised_learning/time_series/coin_csv.JPG
 supervised_learning/transfer_learning/coin_csv.JPG
 supervised_learning/transformer_apps/test-1.ipynb
+supervised_learning/QA.py
