--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *.csv
 *.pyc
+*.md
 supervised_learning/time_series/coin_csv.JPG
 supervised_learning/transfer_learning/coin_csv.JPG
 supervised_learning/transformer_apps/test-1.ipynb
 supervised_learning/QA.py
+supervised_learning/qa_bot/essai0.py
+supervised_learning/qa_bot/ZendeskArticles/.DS_Store
