--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ supervised_learning/transformer_apps/test-1.ipynb
 supervised_learning/QA.py
 supervised_learning/qa_bot/essai0.py
 supervised_learning/qa_bot/ZendeskArticles/.DS_Store
+supervised_learning/qa_bot/torch.py
