--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.csv
 *.pyc
 *.md
+!README.md
 supervised_learning/time_series/coin_csv.JPG
 supervised_learning/transfer_learning/coin_csv.JPG
 supervised_learning/transformer_apps/test-1.ipynb
