--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ supervised_learning/QA.py
 supervised_learning/qa_bot/essai0.py
 supervised_learning/qa_bot/ZendeskArticles/.DS_Store
 supervised_learning/qa_bot/torch.py
+reinforcement_learning/deep_q_learning/breakout_1/fingerprint.pb
+reinforcement_learning/deep_q_learning/breakout_1/keras_metadata.pb
+reinforcement_learning/deep_q_learning/breakout_1/saved_model.pb
+reinforcement_learning/deep_q_learning/breakout_1/variables/variables.data-00000-of-00001
+reinforcement_learning/deep_q_learning/breakout_1/variables/variables.index
