--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ reinforcement_learning/deep_q_learning/breakout_1/keras_metadata.pb
 reinforcement_learning/deep_q_learning/breakout_1/saved_model.pb
 reinforcement_learning/deep_q_learning/breakout_1/variables/variables.data-00000-of-00001
 reinforcement_learning/deep_q_learning/breakout_1/variables/variables.index
+reinforcement_learning/deep_q_learning/breakout_model_5000/fingerprint.pb
+reinforcement_learning/deep_q_learning/breakout_model_5000/keras_metadata.pb
+reinforcement_learning/deep_q_learning/breakout_model_5000/saved_model.pb
+reinforcement_learning/deep_q_learning/breakout_model_5000/variables/variables.data-00000-of-00001
+reinforcement_learning/deep_q_learning/breakout_model_5000/variables/variables.index
