--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ reinforcement_learning/deep_q_learning/breakout_model_5000/keras_metadata.pb
 reinforcement_learning/deep_q_learning/breakout_model_5000/saved_model.pb
 reinforcement_learning/deep_q_learning/breakout_model_5000/variables/variables.data-00000-of-00001
 reinforcement_learning/deep_q_learning/breakout_model_5000/variables/variables.index
+reinforcement_learning/deep_q_learning/policy.h5
+reinforcement_learning/deep_q_learning/policy2.h5
