--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ reinforcement_learning/deep_q_learning/breakout_model_5000/saved_model.pb
 reinforcement_learning/deep_q_learning/breakout_model_5000/variables/variables.index
 reinforcement_learning/policy_gradients/cartpole_score_200.h5
 reinforcement_learning/policy_gradients/cartpole_score_400.h5
+pipeline/apis/0-spoonacular.py
