--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ reinforcement_learning/deep_q_learning/breakout_model_5000/variables/variables.i
 reinforcement_learning/policy_gradients/cartpole_score_200.h5
 reinforcement_learning/policy_gradients/cartpole_score_400.h5
 pipeline/apis/0-spoonacular.py
+pipeline/databases/dump/logs/nginx.bson
+pipeline/databases/dump/logs/nginx.metadata.json
